added a the logo to the html heading...

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header class="container">
       <div class="logo">
         <img src="" alt="" />
+        <h1>logo</h1>
       </div>
 
       <nav class="nav">
@@ -28,7 +29,7 @@
         <div class="user-auth">
           <ul>
             <li><a href="">LOGIN</a></li>
-            <li><a href="">LOGIN</a></li>
+            <li><a href="">SIGN UP</a></li>
           </ul>
         </div>
       </nav>
