--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="container">
       <div class="logo">
         <img src="" alt="" />
-        <h1>logo</h1>
+        <h1>BereauFX</h1>
       </div>
 
       <nav class="nav">
